fix: add additional spacing

--- a/src/components/molecules/improved-timeline/improved-timeline.scss
+++ b/src/components/molecules/improved-timeline/improved-timeline.scss
@@ -18,6 +18,7 @@
   &__event,
   &__detail {
     @include mixins.padding(26, "left");
+    @include mixins.margin(4, "left");
 
     color: var(--color-text-secondary);
     font-family: var(--font-family-primary);
@@ -80,6 +81,7 @@
 
   &__detail {
     @include mixins.margin(0);
+    @include mixins.margin(4, "left");
 
     &::before {
       border-radius: 0 0 6px 6px;
